--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@storybook/addon-actions": "^6.1.1",
     "@storybook/addon-essentials": "^6.1.1",
     "@storybook/addon-links": "^6.1.1",
+    "@storybook/eslint-config-storybook": "^2.4.0",
     "@storybook/node-logger": "^6.1.1",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.1",
