--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
   "dependencies": {
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "apexcharts": "^3.22.2",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.1",
     "twin.macro": "^1.12.1"
@@ -75,6 +77,7 @@
     "@testing-library/user-event": "^12.1.10",
     "babel-loader": "^8.2.1",
     "cross-env": "^7.0.2",
+    "prettier": "2.2.0",
     "react-scripts": "4.0.0",
     "sort-package-json": "^1.48.0",
     "typescript": "^4.1.2"
