--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
     "apexcharts": "^3.22.2",
+    "d3": "^6.2.0",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
@@ -75,8 +76,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/d3": "^6.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "babel-loader": "^8.2.1",
     "cross-env": "^7.0.2",
+    "deepmerge": "^4.2.2",
+    "eslint": "^7.14.0",
     "prettier": "2.2.0",
     "react-scripts": "4.0.0",
     "sort-package-json": "^1.48.0",
