--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/core": "^7.12.3",
     "@emotion/css": "^11.0.0",
     "@storybook/addon-actions": "^6.1.1",
+    "@storybook/addon-controls": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.1",
     "@storybook/addon-links": "^6.1.1",
     "@storybook/node-logger": "^6.1.1",
