--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint:js": "cross-env NODE_ENV=production eslint --cache --cache-location=.cache/eslint --ext .js,.jsx,.html,.ts,.tsx,.mjs --report-unused-disable-directives",
     "lint:package": "sort-package-json",
     "start": "react-scripts start",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -s ./src/assets -p 6006",
     "test": "jest src"
   },
   "lint-staged": {
