--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thepolicylab/design-system",
-  "version": "0.1.0",
+  "version": "0.1.9",
   "description": "The Policy Lab Design System",
   "repository": {
     "type": "git",
@@ -57,9 +57,9 @@
     "@emotion/styled": "^11.0.0",
     "apexcharts": "^3.22.2",
     "d3": "^6.2.0",
-    "react": "^17.0.1",
+    "react": "^16.12.0",
     "react-apexcharts": "^1.3.7",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.12.0",
     "tailwindcss": "^2.0.1",
     "twin.macro": "^1.12.1"
   },
@@ -67,6 +67,7 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@emotion/css": "^11.0.0",
+    "@loadable/component": "^5.14.1",
     "@storybook/addon-actions": "^6.1.1",
     "@storybook/addon-controls": "^6.1.10",
     "@storybook/addon-essentials": "^6.1.1",
@@ -79,9 +80,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/d3": "^6.2.0",
+    "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
-    "@types/jest": "^26.0.15",
     "autoprefixer": "^10.0.2",
     "babel-loader": "^8.2.1",
     "cross-env": "^7.0.2",
