--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thepolicylab/design-system",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "The Policy Lab Design System",
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
     ]
   },
   "dependencies": {
+    "@emotion/babel-preset-css-prop": "^11.0.0",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
     "apexcharts": "^3.22.2",
